nohup.out
  File "C:\Users\zxzas\Desktop\SSDL-master\original_MNIST.py", line 159
    if new_index==51302
                       ^
SyntaxError: invalid syntax
  File "C:\Users\zxzas\Desktop\SSDL-master\original_MNIST.py", line 159
    if new_index==51302
                       ^
SyntaxError: invalid syntax
initializing classifier ... done
start update
aaabbbaaabbb
aaabbbaaabbb
aaabbbaaabbb
aaabbbaaabbb
aaabbbaaabbb
aaabbbaaabbb
aaabbbaaabbb
aaabbbaaabbb
aaabbbaaabbb
aaabbbaaabbb
aaabbbaaabbb
aaabbbaaabbb
aaabbbaaabbb
aaabbbaaabbb
aaabbbaaabbb
aaabbbaaabbb
aaabbbaaabbb
aaabbbaaabbb
aaabbbaaabbb
aaabbbaaabbb
aaabbbaaabbb
aaabbbaaabbb
aaabbbaaabbb
aaabbbaaabbb
aaabbbaaabbb
aaabbbaaabbb
aaabbbaaabbb
aaabbbaaabbb
aaabbbaaabbb
aaabbbaaabbb
aaabbbaaabbb
aaabbbaaabbb
aaabbbaaabbb
aaabbbaaabbb
aaabbbaaabbb
aaabbbaaabbb
aaabbbaaabbb
aaabbbaaabbb
aaabbbaaabbb
aaabbbaaabbb
aaabbbaaabbb
aaabbbaaabbb
aaabbbaaabbb
aaabbbaaabbb
aaabbbaaabbb
aaabbbaaabbb
aaabbbaaabbb
aaabbbaaabbb
aaabbbaaabbb
aaabbbaaabbb
aaabbbaaabbb
aaabbbaaabbb
aaabbbaaabbb
aaabbbaaabbb
aaabbbaaabbb
aaabbbaaabbb
aaabbbaaabbb
aaabbbaaabbb
aaabbbaaabbb
aaabbbaaabbb
aaabbbaaabbb
aaabbbaaabbb
aaabbbaaabbb
aaabbbaaabbb
aaabbbaaabbb
